roles/robot-shop/files/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: web
  namespace: robot-shop
  labels:
    service: web
spec:
  to:
    kind: Service
    name: web
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
